# aws-robomaker-sample-application-deepracer

./: .travis.yml  NOTICE  README.md  aws-robomaker-sample-application-deepracer-README-Localhost.md  github_deploy.pem.enc  roboMakerSettings.json
simulation_ws/: .rosinstall
simulation_ws/src/deepracer_interpreter/: CMakeLists.txt  package.xml
simulation_ws/src/deepracer_interpreter/src/: racecar_plugin.cc  racecar_plugin.hh
simulation_ws/src/deepracer_msgs/: CMakeLists.txt  package.xml
simulation_ws/src/deepracer_msgs/msg/: Progress.msg
simulation_ws/src/deepracer_simulation/: CMakeLists.txt  package.xml
simulation_ws/src/deepracer_simulation/launch/: distributed_training.launch  evaluation.launch  evaluation.launch.py  local_training.launch  local_training.launch.py  racecar.launch  racecar.launch.py  racecar_simulation.launch.py  racetrack_with_racecar.launch  racetrack_with_racecar.launch.py
simulation_ws/src/deepracer_simulation/meshes/hard_track/: Track3_and_Wall.dae
simulation_ws/src/deepracer_simulation/models/easy_track/: model.config  model.sdf
simulation_ws/src/deepracer_simulation/models/hard_track/: model.config  model.sdf
simulation_ws/src/deepracer_simulation/models/medium_track/: model.config  model.sdf
simulation_ws/src/deepracer_simulation/models/racer_car/: model.config  model.sdf
simulation_ws/src/deepracer_simulation/scripts/: run_evaluation_rl_agent.sh  run_local_rl_agent.sh  run_rollout_rl_agent.sh
simulation_ws/src/deepracer_simulation/urdf/: macros.xacro  racecar.gazebo  racecar.xacro
simulation_ws/src/deepracer_simulation/worlds/: hard_track.world  racecar_easy_track.world  racecar_hard_track.world  racecar_medium_track.world  racecar_track.model
simulation_ws/src/sagemaker_rl_agent/: setup.py
simulation_ws/src/sagemaker_rl_agent/markov/: evaluation_worker.py  rollout_worker.py  s3_boto_data_store.py  single_machine_training_worker.py  utils.py
simulation_ws/src/sagemaker_rl_agent/markov/environments/: __init__.py  deepracer_env.py  object_tracker_env.py
simulation_ws/src/sagemaker_rl_agent/markov/presets/: deepracer.py  object_tracker.py
simulation_ws/src/sagemaker_rl_agent/rl_coach/graph_managers/: graph_manager.py
