<?xml version="1.0"?>
<package format="3">
  <name>deepracer_interpreter</name>
  <version>1.0.0</version>
  <description>The DeepRacerInterpreter package</description>
  <maintainer email="gouravr@amazon.com">gouravr</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros_pkgs</depend>
  <depend>deepracer_msgs</depend>
  <depend>gazebo</depend>
  <depend>rclcpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
    <gazebo_ros plugin_path="${prefix}/.." />
  </export>
</package>
