<?xml version="1.0"?>
<package>
  <name>deepracer_msgs</name>
  <version>1.0.0</version>
  <description>Package containing messages for DeepRacer</description>
  <author>Matthew Murphy</author>
  <maintainer email="matmur@amazon.com">Matthew Murphy</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
