<?xml version="1.0"?>
<package format="3">
  <name>deepracer_msgs</name>
  <version>1.0.0</version>
  <description>Package containing messages for DeepRacer</description>
  <author>Matthew Murphy</author>
  <maintainer email="matmur@amazon.com">Matthew Murphy</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
