<?xml version="1.0"?>
<package format="2">
  <name>deepracer_simulation</name>
  <version>1.1.0</version>
  <description>
    Teaches a racecar to drive in a simulation through reinforcement learning.
  </description>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>rclpy</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo</depend>

  <!-- build_depend>ackermann_msgs</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>python3-dev</build_depend-->

  <!-- run_depend>ackermann_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
